@@ -1,7 +1,7 @@
 <form method="post" name="auth">
 
 <div id="std_table">
-<h2>{"Configurations of all nodes of the"|_} {$smarty.const.HOTSPOT_NETWORK_NAME} {"network"|_}</h2>
+<h2>{"Configurations of all nodes of the"|_} {$hotspot_network_name} {"network"|_}</h2>
 <table>
 <thead>
 <tr>
