@@ -1,4 +1,4 @@
-<h3>{$title} {$smarty.const.HOTSPOT_NETWORK_NAME}</h3>
+<h3>{$title} {$hotspot_network_name}</h3>
 
 <b style="position: absolute;top: 10px;right: 10px;">({$user_id})</b> <!-- DEBUG -->
 
