@@ -1,4 +1,4 @@
-<h3>{$title} {$smarty.const.HOTSPOT_NETWORK_NAME}</h3>
+<h3>{$title} {$hotspot_network_name}</h3>
 <script LANGUAGE="JavaScript">
 
 {literal}
