@@ -3,7 +3,7 @@
 <table id="node_list">
 <thead>
 <tr >
-    <th  colspan=6>{"Configurations of all nodes of the"|_} {$smarty.const.HOTSPOT_NETWORK_NAME} {"network"|_}</th> 
+    <th  colspan=6>{"Configurations of all nodes of the"|_} {$hotspot_network_name} {"network"|_}</th> 
 </tr>
 <tr >
     <th >{"Id"|_}</th>
