@@ -21,7 +21,7 @@ function ConfirmDeleteFile(filename) {
 
 <table id="node_list">
 <thead>
-  <tr><th colspan="6">Configurations of all nodes of the {$smarty.const.HOTSPOT_NETWORK_NAME} network</th></tr>
+  <tr><th colspan="6">Configurations of all nodes of the {$hotspot_network_name} network</th></tr>
   <tr>
     <th >Filename</th>
     <th >Action</th>
