@@ -3,7 +3,7 @@
 <table>
 <thead>
 <tr>
-    <th colspan=6>Status of the {$num_deployed_nodes} open {$smarty.const.HOTSPOT_NETWORK_NAME} HotSpots (Get this list as a <a href='?format=RSS'>RSS feed</a>)</th>
+    <th colspan=6>Status of the {$num_deployed_nodes} open {$hotspot_network_name} HotSpots (Get this list as a <a href='?format=RSS'>RSS feed</a>)</th>
 </tr>
 <tr>
     <th>HotSpot / Status</th>
