@@ -1,6 +1,6 @@
 <h4>{"Find more HotSpots"|_}</h4>
 <ul>
-    <li><a href='{$smarty.const.BASE_URL_PATH}{$smarty.const.HOTSPOT_STATUS_PAGE}'>{"List of all HotSpots"|_}</a></li>
+    <li><a href='{$smarty.const.BASE_URL_PATH}{$hotspot_network_name}'>{"List of all HotSpots"|_}</a></li>
 </ul>
 
 <h4>{"User management"|_}</h4>
@@ -14,6 +14,6 @@
     <li><a href='{$smarty.const.BASE_SSL_PATH}change_password.php'>{"Change password"|_}</a></li>
 </ul>
 
-<p class='sidenote'>{"Accounts on"|_} {$smarty.const.HOTSPOT_NETWORK_NAME} {"are and will remain <emp>totally free</emp>, use the left menu to create a new one or recover a lost username or password"|_}.</p>
+<p class='sidenote'>{"Accounts on"|_} {$hotspot_network_name} {"are and will remain <emp>totally free</emp>, use the left menu to create a new one or recover a lost username or password"|_}.</p>
 
 <p class='sidenote'>{"Please report any problem or interruption in our service to"|_}: <a href='mailto:{$smarty.const.TECH_SUPPORT_EMAIL}'>{$smarty.const.TECH_SUPPORT_EMAIL}</a></p>
